--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,14 +40,19 @@ jobs:
           # Static pages
           cp -f *.html site/
 
+          # SEO files
+          if [ -f robots.txt ]; then cp -f robots.txt site/robots.txt; fi
+          if [ -f sitemap.xml ]; then cp -f sitemap.xml site/sitemap.xml; fi
+
           # Bundles
           cp -r dist site/dist
 
           # Static assets (favicons, images)
           cp -r assets site/assets
 
-          # Logo referenced by pages as ./logo.png
+          # Root logos referenced by pages
           if [ -f logo.png ]; then cp -f logo.png site/logo.png; fi
+          if [ -f logo.svg ]; then cp -f logo.svg site/logo.svg; fi
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
